--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,56 @@
-/*
+/* @settings
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
+name: Auto Backlink
+id: ab-style
+settings:
+    - 
+        id: ab-max-width
+        title: Maximum width
+        description: The maximum width of the block before it has be scrolled.
+        type: variable-number
+        default: 300
+        format: px
 
 */
+
+.mentions {
+    background-color: #151515;
+    position: absolute;
+    bottom: 25px;
+    /* display: inline; */
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: var(--ab-max-width);
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.mention, .mention-title, .mention-title-muted {
+    font-size: large;
+    text-decoration: none;
+}
+
+.mention:hover {
+    text-decoration: none;
+}
+
+.mention-title {
+    white-space: pre;
+    color: rgb(230, 230, 230);
+}
+
+.mention-title-muted {
+    white-space: pre;
+    color: rgb(105, 105, 105);
+}
+
+.status-bar {
+    margin-bottom: 5px;
+    margin-right: 5px;
+    background: none;
+    border: none;
+}
+
+.status-bar-item {
+    color: rgb(105, 105, 105);
+}
