--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,83 @@
-/*
+/* @settings
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+name: Mentions in Status Bar
+id: ab-style
+settings:
+    - 
+        id: ab-max-width
+        title: Maximum width
+        description: The maximum width of the block before it has be scrolled.
+        type: variable-number
+        default: 300
+        format: px
 
-If your plugin does not need CSS, delete this file.
+    - 
+        id: ab-font-size
+        title: Font Size
+        type: variable-number
+        default: 1
+        format: em
+    -
+        id: mention-color
+        title: Mention Color
+        type: variable-color
+        format: hex
+        default: '#fff'
+    -
+        id: hover-color
+        title: Hover Color
+        type: variable-color
+        format: hex
+        default: '#fff'
 
 */
+
+.status-bar {
+    /* margin-bottom: 5px;
+    margin-right: 5px; */
+    background: none;
+    border: none;
+    display: flex;
+}
+
+.status-bar-item {
+    color: rgb(105, 105, 105);
+    order: 8;
+}
+
+.mentions {
+    background-color: #151515;
+    /* position: absolute;
+    bottom: 20px;
+    right: 2px; */
+    /* display: inline; */
+    overflow-y: hidden;
+    white-space: nowrap;
+    max-width: var(--ab-max-width);
+    order: 1;
+
+}
+
+.mention, .mention-space, .mention-title-muted {
+    font-size: var(--ab-font-size);
+    text-decoration: none;
+    color: var(--mention-color);
+    padding: 3px;
+}
+
+.mention:hover {
+    background-color: #212121;
+    border-radius: 5px;
+    text-decoration: none;
+    color: var(--hover-color);
+}
+
+.mention-space {
+    white-space: pre;
+    color: rgb(80, 80, 80);
+}
+
+.mention-title-muted {
+    white-space: pre;
+    color: rgb(105, 105, 105);
+}
